// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlashList /> renders <FlashList /> component 1`] = `
<Fragment>
  <Memo(Flash)
    close={[Function]}
    key="ABC"
    message={
      Object {
        "id": "ABC",
        "text": "Very negative text",
        "type": "error",
      }
    }
  />
</Fragment>
`;

exports[`<FlashList /> updates props correctly 1`] = `
<Fragment>
  <Memo(Flash)
    close={[Function]}
    key="ABC"
    message={
      Object {
        "id": "ABC",
        "text": "Very negative text",
        "type": "error",
      }
    }
  />
  <Memo(Flash)
    close={[Function]}
    key="DEF"
    message={
      Object {
        "id": "DEF",
        "text": "Very positive text",
        "type": "success",
      }
    }
  />
</Fragment>
`;
